--- a/css/common.css
+++ b/css/common.css
@@ -12,6 +12,48 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+.item-ul {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.item {
+  display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    border-radius: 8px;
+      width: 392px;
+      height: 312px;
+      background: #f6f6fe;
+}
+.item-title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+    font-size: 24px;
+    line-height: 1.33333;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    margin-left: 16px;
+    margin-bottom: 16px;
+}
+.item-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding-left: 16px;
+  margin-right: 16px;
+}
+.item-list-item {
+  background-color: #ffffff;
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+    padding: 8px 316px 8px 16px;
+    
+    font-size: 16px;
+    color: #495057;
+    
+}
 .gallery {
   display: flex;
     flex-wrap: wrap;
@@ -27,4 +69,26 @@ body {
 }
 .gallery img:hover {
   transform: scale(1.1);
+}
+.input-anonymus {
+  border: 1px solid #808080;
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+}
+.input-anonymus::placeholder {
+font-weight: 400;
+  font-size: 16px;
+  padding-left: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+.anonymus-header {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+    font-size: 24px;
+    line-height: 1.33333;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
 }
