--- a/css/common.css
+++ b/css/common.css
@@ -92,3 +92,127 @@ font-weight: 400;
     letter-spacing: 0.04em;
     color: #2e2f42;
 }
+.login-form {
+  display: flex;
+    flex-direction: column;
+    max-width: 408px;
+    padding: 20px 30px;
+    background-color: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      margin: 50px auto;
+      font-family: Arial, sans-serif;
+}
+.login-label {
+  display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+    color: #333333;
+}
+.login-form input[type="email"],
+.login-form input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+.login-submit-btn {
+  max-width: 84px;
+    padding: 10px;
+    background-color: #4a72f5;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.login-form button:hover {
+  background-color: #3a5fc1;
+}
+
+.widget {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    max-width: 365px;
+    height: 280px;
+    background: #fff;
+    margin: auto;
+  
+}
+.widget-dscr {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+.change-color {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+    border: none;
+    border-radius: 8px;
+      padding: 8px 16px;
+      color: #ffffff;
+      background: #4e75ff;
+}
+
+.controls-div {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  border-radius: 8px;
+    padding: 32px;
+    width: 486px;
+    background: #f6f6fe;
+    margin: auto;
+}
+.input {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid #808080;
+      border-radius: 8px;
+      padding: 8px;
+      width: 150px;
+      background-color: inherit;
+}
+.create-btn {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+    border: none;
+    color: #ffffff;
+    border-radius: 8px;
+      padding: 8px 16px;
+      width: 120px;
+      background: #4e75ff;
+}
+.destroy-btn {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+    border: none;
+    color: #ffffff;
+    border-radius: 8px;
+    padding: 8px 16px;
+    width: 120px;
+    background: #ff4e4e;
+}
